--- a/restdos/theme/templates/base.html
+++ b/restdos/theme/templates/base.html
@@ -1,11 +1,15 @@
 {% load static tailwind_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+		<!-- Required Meta Tags -->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    	<title>RestDos</title>
+		
 		{% tailwind_css %}
 	</head>
 
