--- a/restdos/guests/templates/guests/guest_detail.html
+++ b/restdos/guests/templates/guests/guest_detail.html
@@ -2,30 +2,29 @@
 
 {% block extra_title %}Guests{% endblock %}
 
+{% block secondary-cta %}
+<a href="#" class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+    <svg xmlns="http://www.w3.org/2000/svg" class="mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+      </svg>
+    Delete Guest
+    </a>
+{% endblock %}
+
+{% block primary-cta %}
+<a href="#" class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+    <svg xmlns="http://www.w3.org/2000/svg" class="mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+      </svg>
+    Add Booking
+    </a>
+{% endblock%}
+
 {% block body %}
 
 
 
 <div class="mt-10 sm:mt-0">
-    <div class="flex flex-row-reverse space-x-4 space-x-reverse">
-        <a type="button" href="#"
-            class="inline-flex items-center px-4 py-2 mb-4 text-sm font-medium text-red-700 hover:text-red-500">
-            Delete Guest
-            <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 -mr-1 h-5 w-5" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-            </svg>
-        </a>
-        <a href="#"
-            class="inline-flex items-center px-4 py-2 mb-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
-            </svg>
-            Add Booking
-        </a>
-    </div>
 
     <div class="lg:grid lg:grid-cols-3 lg:gap-6">
         <div class="lg:col-span-1">
@@ -39,8 +38,239 @@
             </div>
         </div>
         <div class="mt-5 md:mt-0 md:col-span-2">
-            {% url 'guest_detail' guest.id as submit_action %}
-            <!--  include "guest_personal_information.html" with submit_action=submit_action  -->
+            <form action="#" method="POST">
+                {% csrf_token %}
+                <div class="shadow overflow-hidden sm:rounded-md">
+                    <div class="px-4 py-5 bg-white sm:p-6">
+                        <div class="grid grid-cols-6 gap-6">
+            
+                            <input type="hidden" value="1" name="business_id" id="business_id">
+                            
+                            <!-- First name input -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="first_name" class="block text-sm font-medium text-gray-700">
+                                    First Name
+                                </label>
+                                <input
+                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                                type="text"
+                                name="first_name"
+                                id="first_name"
+                                value="{{ guest.first_name }}"
+                                required
+                                >
+                                <div class="px-2.5 py-0.5 mt-1 rounded-full text-xs font-medium bg-red-100 text-red-800 whitespace-nowrap w-min hidden">
+                                    First Name is required
+                                </div>
+                            </div>
+            
+                            <!-- Last name input -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="last_name" class="block text-sm font-medium text-gray-700">
+                                    Last Name
+                                </label>
+                                <input
+                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                                type="text"
+                                name="last_name"
+                                id="last_name"
+                                value="{{ guest.last_name }}"
+                                required
+                                >
+                                <div class="px-2.5 py-0.5 mt-1 rounded-full text-xs font-medium bg-red-100 text-red-800 whitespace-nowrap w-min hidden">
+                                    Last Name is required
+                                </div>
+                            </div>
+            
+                            <!-- Email input -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="email" class="block text-sm font-medium text-gray-700">
+                                    Email
+                                </label>
+                                <input
+                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                                type="email"
+                                name="email"
+                                id="email"
+                                value="{{ guest.email }}"
+                                required
+                                >
+                                <div class="px-2.5 py-0.5 mt-1 rounded-full text-xs font-medium bg-red-100 text-red-800 whitespace-nowrap w-min hidden">
+                                    Email is required
+                                </div>
+                            </div>
+            
+                            <!-- Mobile input -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="mobile" class="block text-sm font-medium text-gray-700">
+                                    Mobile
+                                </label>
+                                <input
+                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                                type="tel"
+                                name="mobile"
+                                id="mobile"
+                                value="{{ guest.mobile }}"
+                                required
+                                >
+                                <div class="px-2.5 py-0.5 mt-1 rounded-full text-xs font-medium bg-red-100 text-red-800 whitespace-nowrap w-min hidden">
+                                    Mobile is required
+                                </div>
+                            </div>
+            
+                            <!-- Date of birth input -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="dob" class="block text-sm font-medium text-gray-700">
+                                    Date of Birth
+                                </label>
+                                <input
+                                type="date"
+                                name="dob"
+                                id="dob"
+                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                                value="{{ guest.dob|date:'Y-m-d' }}"
+                                >
+                            </div>
+            
+                            <!-- Guest Since input -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="guest_since" class="block text-sm font-medium text-gray-700">
+                                    Guest Since
+                                </label>
+                                <span class="bookler-system-set" onmouseover="tooltip('guest')" onclick="tooltip('guest')">
+                                    <input 
+                                    type="date"
+                                    name="guest_since"
+                                    id="guest_since"
+                                    class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 bg-gray-100 rounded-md cursor-not-allowed"
+                                    value="{% if guest.guest_since %}{{ guest.guest_since|date:'Y-m-d' }}{% else %}{% now 'Y-m-d' %}{% endif %}"
+                                    required
+                                    >
+                                </span>
+                            </div>
+            
+                            <!-- Marketing & Transactional consent checkboxes for email and sms -->
+                            <div class="col-span-6 sm:col-span-3">
+                                <label class="block text-sm font-medium text-gray-700 underline">Email Messaging</label>
+                      
+                                    <fieldset class="mt-4">
+                                        <legend class="sr-only">
+                                            Email Messaging
+                                        </legend>
+                                        <div class="space-y-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-10">
+                                            <div class="flex items-center">
+                                                <input
+                                                id="email_marketing_consent"
+                                                name="email_marketing_consent"
+                                                type="checkbox"
+                                                class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
+                                                {% if guest.email_marketing_consent %} checked{% endif %}
+                                                >
+                                                <label for="email_marketing_consent" class="ml-3 block text-sm font-medium text-gray-700">
+                                                    Marketing
+                                                </label>
+                                            </div>
+                                
+                                            <div class="flex items-center">
+                                                <input
+                                                id="email_transactional_consent"
+                                                name="email_transactional_consent"
+                                                type="checkbox"
+                                                class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
+                                                {% if guest.email_transactional_consent %} checked{% endif %}
+                                                >
+                                                <label for="email_transactional_consent" class="ml-3 block text-sm font-medium text-gray-700">
+                                                    Transactional
+                                                </label>
+                                            </div>
+                            
+                                        </div>
+                                    </fieldset>
+                                </div>
+            
+                                <div class="col-span-6 sm:col-span-3">
+                                    <label class="block text-sm font-medium text-gray-700 underline">
+                                        SMS Messaging
+                                    </label>
+                                    <fieldset class="mt-4">
+                                        <legend class="sr-only">
+                                            SMS Messaging
+                                        </legend>
+                                        <div class="space-y-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-10">
+                                            <div class="flex items-center">
+                                                <input
+                                                id="sms_marketing_consent"
+                                                name="sms_marketing_consent"
+                                                type="checkbox"
+                                                class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
+                                                {% if guest.sms_marketing_consent %} checked{% endif %}
+                                                >
+                                                <label for="sms_marketing_consent" class="ml-3 block text-sm font-medium text-gray-700">
+                                                    Marketing
+                                                </label>
+                                            </div>
+                          
+                                                <div class="flex items-center">
+                                                    <input 
+                                                    id="sms_transactional_consent"
+                                                    name="sms_transactional_consent"
+                                                    type="checkbox"
+                                                    class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" 
+                                                    {% if guest.sms_transactional_consent %}checked{% endif %}
+                                                    >
+                                                <label for="sms_transactional_consent" class="ml-3 block text-sm font-medium text-gray-700">
+                                                    Transactional
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </div>
+            
+                            <!-- Guest Rating input -->
+                            <div class="col-span-6 sm:col-span-3 lg:col-span-2">
+                                <label class="block text-sm font-medium text-gray-700">
+                                    Guest Rating
+                                </label>
+                                <div id="starRating">
+                                    {% for x in guest.rating %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 inline text-yellow-400"
+                                            viewBox="0 0 20 20" fill="currentColor" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+                                                d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                                        </svg>
+                                    {% endfor %}
+                                    {% for x in guest.unrating %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 inline text-yellow-400"
+                                            fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+                                                d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
+                                        </svg>
+                                    {% endfor %}
+                                </div>
+                                <input type="hidden" id="rating" name="rating" value="{{ guest.rating|length }}">
+                            </div>
+            
+            
+                        </div>
+                    </div>
+            
+                    <!-- Submit or cancel -->
+                    <div class="px-4 py-3 bg-indigo-50 text-right sm:px-6">
+                        <a 
+                        type="button"
+                        href="{% url 'guests' %}"
+                        class="inline-flex items-center px-4 py-2 text-sm font-medium text-red-700 hover:text-red-500">
+                            Cancel
+                        </a>
+                        <button 
+                        type="submit"
+                        class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            Save
+                        </button>
+                    </div>
+            
+                </div>
+            </form>
         </div>
     </div>
 </div>
