--- a/restdos/theme/templates/bases/base-app.html
+++ b/restdos/theme/templates/bases/base-app.html
@@ -335,12 +335,11 @@
         </div>
       </div>
       <div class="mt-6 flex space-x-3 md:mt-0 md:ml-4">
-        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-          Add money
-        </button>
-        <button type="button" class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-          Send money
-        </button>
+        {% block secondary-cta %}
+        {% endblock %}
+
+        {% block primary-cta %}
+        {% endblock%}
       </div>
     </div>
   </div>
