STYLE: Simplified base-website theme

--- a/restdos/theme/templates/bases/base-website.html
+++ b/restdos/theme/templates/bases/base-website.html
@@ -287,25 +287,25 @@
               <ul role="list" class="mt-4 space-y-4">
                 <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                    Guest Management
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
                     Marketing
                   </a>
                 </li>
 
                 <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Analytics
+                    Automated Messaging
                   </a>
                 </li>
 
                 <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Commerce
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    Insights
+                    Booking Management
                   </a>
                 </li>
               </ul>
@@ -321,7 +321,7 @@
                   </a>
                 </li>
 
-                <li>
+                <!-- <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
                     Documentation
                   </a>
@@ -331,11 +331,11 @@
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
                     Guides
                   </a>
-                </li>
+                </li> -->
 
                 <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                    API Status
+                    Contact
                   </a>
                 </li>
               </ul>
@@ -359,7 +359,7 @@
                   </a>
                 </li>
 
-                <li>
+                <!-- <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
                     Jobs
                   </a>
@@ -375,7 +375,7 @@
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
                     Partners
                   </a>
-                </li>
+                </li> -->
               </ul>
             </div>
             <div class="mt-12 md:mt-0">
@@ -383,11 +383,11 @@
                 Legal
               </h3>
               <ul role="list" class="mt-4 space-y-4">
-                <li>
+                <!-- <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
                     Claim
                   </a>
-                </li>
+                </li> -->
 
                 <li>
                   <a href="#" class="text-base text-gray-500 hover:text-gray-900">
