--- a/restdos/signup/templates/signup/billing.html
+++ b/restdos/signup/templates/signup/billing.html
@@ -20,6 +20,7 @@
         <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
           
           {% crispy signup_form %}
+          <hr>
           <div id="card-element"></div>
           <div id="card-errors" role="alert"></div>
         </div>
@@ -39,4 +40,33 @@
     </div>
   </form>
   
+  {% endblock %}
+
+  {% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script>
+      var stripe_public_key = document.getElementById('id_stripe_public_key').innerHTML;
+var client_secret = document.getElementById('id_client_secret').innerHTML;
+var stripe = Stripe(stripe_public_key);
+var elements = stripe.elements();
+var style = {
+    base: {
+        color: '#000',
+        fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+        fontSmoothing: 'antialiased',
+        fontSize: '16px',
+        '::placeholder': {
+            color: '#aab7c4'
+        }
+    },
+    invalid: {
+        color: '#dc3545',
+        iconColor: '#dc3545'
+    }
+};
+var card = elements.create('card', {style: style});
+card.mount('#card-element');
+    </script>
   {% endblock %}
