FEAT: Added stripe to signup flow and accepted payments in test mode

--- a/restdos/signup/templates/signup/billing.html
+++ b/restdos/signup/templates/signup/billing.html
@@ -6,67 +6,121 @@
 {% block content %}
 <form action="{% url 'billing' %}" method="POST" id="signup-form" class="space-y-8 divide-y divide-gray-200">
   {% csrf_token %}
-    <div class="space-y-8 divide-y divide-gray-200">
+  <div class="space-y-8 divide-y divide-gray-200">
+    <div>
       <div>
-        <div>
-          <h3 class="text-lg leading-6 font-medium text-gray-900">
-            Billing Information
-          </h3>
-          <p class="mt-1 text-sm text-gray-500">
-            This information will be displayed publicly so be careful what you share.
-          </p>
-        </div>
-  
-        <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-          
-          {% crispy signup_form %}
-          <hr>
-          <div id="card-element"></div>
-          <div id="card-errors" role="alert"></div>
-        </div>
+        <h3 class="text-lg leading-6 font-medium text-gray-900">
+          Billing Information
+        </h3>
+        <p class="mt-1 text-sm text-gray-500">
+          This information will be displayed publicly so be careful what you share.
+        </p>
       </div>
 
-    </div>
-  
-    <div class="pt-5">
-      <div class="flex justify-end">
-        <button type="button" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-          Cancel
-        </button>
-        <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-          Save
-        </button>
+      <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4">
+
+        {% crispy signup_form %}
+        <hr>
+        <div id="card-element"></div>
+        <div id="card-errors" role="alert"></div>
       </div>
     </div>
-  </form>
-  
-  {% endblock %}
+  </div>
 
-  {% block postloadjs %}
-    {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
-    <script>
-      var stripe_public_key = document.getElementById('id_stripe_public_key').innerHTML;
-var client_secret = document.getElementById('id_client_secret').innerHTML;
-var stripe = Stripe(stripe_public_key);
-var elements = stripe.elements();
-var style = {
+  <div class="pt-5">
+    <div class="flex justify-end">
+      <button type="reset" form="signup-form"
+        class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        Cancel
+      </button>
+      <button type="submit" form="signup-form" id="submit-button"
+        class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        Save
+      </button>
+    </div>
+  </div>
+</form>
+
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{{ stripe_public_key|json_script:"id_stripe_public_key" }}
+{{ client_secret|json_script:"id_client_secret" }}
+<script>
+  var stripePublicKey = document.getElementById('id_stripe_public_key').innerHTML.slice(1,-1);
+  var clientSecret = document.getElementById('id_client_secret').innerHTML.slice(1,-1);
+  var stripe = Stripe(stripePublicKey);
+  var elements = stripe.elements();
+  var style = {
     base: {
-        color: '#000',
-        fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-        fontSmoothing: 'antialiased',
-        fontSize: '16px',
-        '::placeholder': {
-            color: '#aab7c4'
-        }
+      color: '#000',
+      fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+      fontSmoothing: 'antialiased',
+      fontSize: '16px',
+      '::placeholder': {
+        color: '#aab7c4'
+      }
     },
     invalid: {
-        color: '#dc3545',
-        iconColor: '#dc3545'
+      color: '#dc3545',
+      iconColor: '#dc3545'
     }
-};
-var card = elements.create('card', {style: style});
-card.mount('#card-element');
-    </script>
-  {% endblock %}
+  };
+  var card = elements.create('card', { style: style });
+  card.mount('#card-element');
+
+  // ERROR CHECKING STRIPE
+  card.addEventListener('change', function (event) {
+    var errorDiv = document.getElementById('card-errors');
+    if (event.error) {
+      var html = `
+      <span class="icon" role="alert">
+          <i class="fas fa-times"></i>
+      </span>
+      <span>${even.error.message}</span>
+      `;
+      errorDiv.innherHTML = html;
+      console.log('card error');
+    } else {
+      errorDiv.textContent = '';
+      console.log('no card error');
+    }
+  });
+
+
+  // PAYMENT INTENT WITHIN STRIPE
+  var form = document.getElementById('signup-form');
+  console.log(form);
+
+  form.addEventListener('submit', function (ev) {
+    ev.preventDefault();
+    console.log('button pressed');
+    card.update({ 'disabled': true});
+    document.getElementById('submit-button').disabled = true;
+    stripe.confirmCardPayment(clientSecret, {
+      payment_method: {
+        card: card,
+      }
+    }).then(function (result) {
+      if (result.error) {
+        var errorDiv = document.getElementById('card-errors');
+        var html = `
+        <span class="icon" role="alert">
+            <i class="fas fa-times">error</i>
+        </span>
+        <span>${result.error.message}</span>
+      `;
+        errorDiv.innerHTML = html;
+        card.update({ 'disabled': false});
+        document.getElementById('submit-button').disabled = false;
+        console.log(result.error.message);
+      } else {
+        if (result.paymentIntent.status === 'succeeded') {
+          form.submit();
+        }
+      }
+    });
+  });
+</script>
+{% endblock %}
