REF: Moved signup flow to website and deleted signup app

--- a/restdos/website/templates/website/pricing.html
+++ b/restdos/website/templates/website/pricing.html
@@ -74,7 +74,7 @@
                 </ul>
                 <div class="mt-8">
                   <div class="rounded-lg shadow-md">
-                    <a href="#" class="block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50" aria-describedby="tier-advantage">
+                    <a href="{% url 'signup' %}" class="block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50" aria-describedby="tier-advantage">
                       Start today
                     </a>
                   </div>
@@ -178,7 +178,7 @@
               </ul>
               <div class="mt-10">
                 <div class="rounded-lg shadow-md">
-                  <a href="#" class="block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700" aria-describedby="tier-first-advantage">
+                  <a href="{% url 'signup' %}" class="block w-full text-center rounded-lg border border-transparent bg-indigo-600 px-6 py-4 text-xl leading-6 font-medium text-white hover:bg-indigo-700" aria-describedby="tier-first-advantage">
                     Start today
                   </a>
                 </div>
@@ -249,7 +249,7 @@
                 </ul>
                 <div class="mt-8">
                   <div class="rounded-lg shadow-md">
-                    <a href="#" class="block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50" aria-describedby="tier-elite">
+                    <a href="{% url 'signup' %}" class="block w-full text-center rounded-lg border border-transparent bg-white px-6 py-3 text-base font-medium text-indigo-600 hover:bg-gray-50" aria-describedby="tier-elite">
                       Start today
                     </a>
                   </div>
