--- a/restdos/website/templates/website/signup.html
+++ b/restdos/website/templates/website/signup.html
@@ -24,9 +24,9 @@
     </div>
   </div>
 
-
+<div class="bg-gray-100 pb-12">
 <div class="w-1/3 mx-auto">
-    <form action="{% url 'signup' %}" method="POST" id="signup-form" class="space-y-8 divide-y divide-gray-200">
+    <form action="{% url 'payment' %}" method="POST" id="signup-form" class="divide-y divide-gray-200">
         {% csrf_token %}
         <div class="space-y-8 divide-y divide-gray-200">
           <div>
@@ -59,6 +59,7 @@
       </form>
 
       
+</div>
 </div>
 
 {% endblock %}
