--- a/restdos/website/templates/website/signup.html
+++ b/restdos/website/templates/website/signup.html
@@ -26,7 +26,7 @@
 
 <div class="bg-gray-100 pb-12">
 <div class="w-1/3 mx-auto">
-    <form action="{% url 'payment' %}" method="POST" id="signup-form" class="divide-y divide-gray-200">
+    <form action="{% url 'signup' signup_plan signup_monthly %}" method="POST" id="signup-form" class="divide-y divide-gray-200">
         {% csrf_token %}
         <div class="space-y-8 divide-y divide-gray-200">
           <div>
