STYLE: Updated website index hero section

--- a/restdos/website/templates/website/index.html
+++ b/restdos/website/templates/website/index.html
@@ -9,16 +9,16 @@
     <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
       <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
         <div class="absolute inset-0">
-          <img class="h-full w-full object-cover" src="https://images.unsplash.com/photo-1546195643-70f48f9c5b87?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="People working on laptops">
+          <img class="h-full w-full object-cover" src="https://th.bing.com/th/id/R.00c5a689df7665ce66043a96a830dbcd?rik=bK47uc03GDr4Gw&riu=http%3a%2f%2fwww.buro247.me%2fimages%2fCA1-BK_Dining13.gif&ehk=JD6Pt2aBzXPkCFDny31UpN7IOMdioZ2xlb5vNDz1rfU%3d&risl=&pid=ImgRaw&r=0" alt="People working on laptops">
           <div class="absolute inset-0 bg-gradient-to-r from-purple-800 to-indigo-700 mix-blend-multiply"></div>
         </div>
         <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
           <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-            <span class="block text-white">Start growing your</span>
-            <span class="block text-indigo-200">restaurants revenue</span>
+            <span class="block text-white">Grow your</span>
+            <span class="block text-indigo-200">restaurant revenue</span>
           </h1>
           <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
-            Take control of your guest database to grow your restaurant. Powerful marketing, complete guest management and effective automated messaging that works for you.
+            Take control of your guest database to grow your restaurant. Powerful messaging, complete guest management and effective booking management that works for you.
           </p>
           <div class="mt-10 max-w-sm mx-auto sm:max-w-none sm:flex sm:justify-center">
             <div class="space-y-4 sm:space-y-0 sm:mx-auto sm:inline-grid sm:grid-cols-2 sm:gap-5">
@@ -41,10 +41,10 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
-          Focus on growing your revenue
+          Your restaurant booking solution
         </h2>
         <p class="mt-3 text-xl text-gray-500 sm:mt-4">
-          Marketing, Online Booking and Guest Relationship Management that works for yous.
+          Messaging, Bookings and Guest Relationship Management that works for yous.
         </p>
       </div>
     </div>
@@ -64,10 +64,10 @@
               </div>
               <div class="flex flex-col border-t border-b border-gray-100 p-6 text-center sm:border-0 sm:border-l sm:border-r">
                 <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
-                  Online Booking
+                  Guest Ratings
                 </dt>
                 <dd class="order-1 text-5xl font-extrabold text-indigo-600">
-                  24/7
+                  5 *
                 </dd>
               </div>
               <div class="flex flex-col border-t border-gray-100 p-6 text-center sm:border-0 sm:border-l">
