--- a/restdos/website/templates/website/pricing.html
+++ b/restdos/website/templates/website/pricing.html
@@ -34,11 +34,11 @@
       <div>
         <h1 class="text-4xl font-extrabold sm:text-5xl sm:tracking-tight">
           <span class="text-gray-900">Everything for </span>
-          <span class="text-indigo-600"><strike>€100</strike> €33 a month</span>
+          <span class="text-indigo-600">€{% if primary_string == '100' %}{{ primary_string }}{% else %}<strike>100</strike>{{ primary_string}}{% endif %}</span>
         </h1>
-        <p class="mt-5 text-xl text-gray-500">Includes every feature we offer at a permanently reduced price for the next 25 customers.</p>
+        <p class="mt-5 text-xl text-gray-500">Includes every feature we offer {{ secondary_string }}.</p>
       </div>
-      <a href="{% url 'signup' 'First Advantage' 33 %}" class="mt-8 w-full bg-indigo-600 border border-transparent px-5 py-3 inline-flex items-center justify-center text-base font-medium rounded-md text-white hover:bg-indigo-700 sm:mt-10 sm:w-auto xl:mt-0">Get started today</a>
+      <a href="{% url 'signup' plan monthly %}" class="mt-8 w-full bg-indigo-600 border border-transparent px-5 py-3 inline-flex items-center justify-center text-base font-medium rounded-md text-white hover:bg-indigo-700 sm:mt-10 sm:w-auto xl:mt-0">Get started today</a>
     </div>
     <div class="border-t border-gray-200 pt-16 xl:grid xl:grid-cols-3 xl:gap-x-8">
       <div>
