--- a/guests/templates/guests/add_guest.html
+++ b/guests/templates/guests/add_guest.html
@@ -1,8 +1,11 @@
 {% extends "bases/base-app.html" %}
+{% load tailwind_filters %}
+{% load crispy_forms_tags %}
 
 {% block extra_title %}Add Guest{% endblock %}
 
 {% block body %}
+
 <div class="mt-10 sm:mt-0">
     <div class="md:grid md:grid-cols-3 md:gap-6">
         <div class="md:col-span-1">
@@ -16,94 +19,13 @@
             </div>
         </div>
         <div class="mt-5 md:mt-0 md:col-span-2">
-            <form action="{% url 'add_guest' %}" method="POST">
-                <div class="shadow overflow-hidden sm:rounded-md">
-                    <div class="px-4 py-5 bg-white sm:p-6">
-                        <div class="grid grid-cols-6 gap-6">
-                            <div class="col-span-6 sm:col-span-3">
-                                <label for="first_name" class="block text-sm font-medium text-gray-700">
-                                    First name</label>
-                                <input type="text" name="first_name" id="first_name"
-                                    class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-                                    required>
-                            </div>
-
-                            <div class="col-span-6 sm:col-span-3">
-                                <label for="last_name" class="block text-sm font-medium text-gray-700">
-                                    Last name
-                                </label>
-                                <input type="text" name="last_name" id="last_name"
-                                    class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-                                    required>
-                            </div>
-
-                            <div class="col-span-6 sm:col-span-3">
-                                <label for="email" class="block text-sm font-medium text-gray-700">
-                                    Email address
-                                </label>
-                                <input type="text" name="email" id="email"
-                                    class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-                                    required>
-                            </div>
-
-                            <div class="col-span-6 sm:col-span-3">
-                                <label for="mobile" class="block text-sm font-medium text-gray-700">
-                                    Mobile
-                                </label>
-                                <input type="tel" name="mobile" id="mobile"
-                                    class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-                                    required>
-                            </div>
-
-                            <div class="col-span-6 sm:col-span-6 lg:col-span-2">
-                                <label for="dob" class="block text-sm font-medium text-gray-700">
-                                    Date Of Birth
-                                </label>
-                                <input type="date" name="dob" id="dob"
-                                    class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                            </div>
-
-                            <div class="col-span-6 sm:col-span-3 lg:col-span-2">
-                                <label class="block text-sm font-medium text-gray-700">
-                                    Rating
-                                </label>
-                                <div id="starRating">
-                                    {% for x in stars %}
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 inline text-yellow-400"
-                                            viewBox="0 0 20 20" fill="currentColor" stroke="currentColor" onclick="starRating('{{ x }}')">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
-                                                d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-                                        </svg>
-                                    {% endfor %}
-                                </div>
-                                <input type="hidden" id="rating" name="rating" value=0>
-                            </div>
-
-                            <div class="col-span-6">
-                                <div class="flex items-start">
-                                    <div class="flex items-center h-5">
-                                        <input id="marketingConsent" name="marketingConsent" type="checkbox"
-                                            class="focus:ring-blue-500 h-4 w-4 text-blue-600 border-gray-300 rounded">
-                                    </div>
-                                    <div class="ml-3 text-sm">
-                                        <label for="marketingConsent" class="font-medium text-gray-700">
-                                            Marketing Consent</label>
-                                        <p class="text-gray-500">
-                                            Guest is happy to receive promotional materials from the restaurant.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="px-4 py-3 bg-blue-50 text-right sm:px-6">
-                        <button type="submit"
-                            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                            Add Guest
-                        </button>
+            <div class="shadow overflow-hidden sm:rounded-md">
+                <div class="px-4 py-5 bg-white sm:p-6">
+                    <div class="grid grid-cols-2 gap-6">
+                        {% crispy personal_information_form personal_information_form.helper %}
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
