--- a/guests/templates/guests/add_guest.html
+++ b/guests/templates/guests/add_guest.html
@@ -1,6 +1,5 @@
 {% extends "bases/base-app.html" %}
 {% load tailwind_filters %}
-{% load crispy_forms_tags %}
 
 {% block extra_title %}Add Guest{% endblock %}
 
@@ -19,13 +18,27 @@
             </div>
         </div>
         <div class="mt-5 md:mt-0 md:col-span-2">
-            <div class="shadow overflow-hidden sm:rounded-md">
-                <div class="px-4 py-5 bg-white sm:p-6">
-                    <div class="grid grid-cols-2 gap-6">
-                        {% crispy personal_information_form personal_information_form.helper %}
+            <form action="{% url 'add_guest' %}" method="POST">
+                {% csrf_token %}
+                <div class="shadow overflow-hidden sm:rounded-md">
+                    <div class="px-4 py-5 bg-white sm:p-6">
+                        <div class="grid grid-cols-2 gap-6">
+                            {{ personal_information_form|crispy }}
+                        </div>
                     </div>
                 </div>
-            </div>
+                <!-- Submit or cancel -->
+                <div class="px-4 py-3 bg-indigo-50 text-right sm:px-6">
+                    <a type="button" href="{% url 'guests' %}"
+                        class="inline-flex items-center px-4 py-2 text-sm font-medium text-blue-500 hover:text-black">
+                        Cancel
+                    </a>
+                    <button type="submit"
+                        class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        Save
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
