--- a/guests/templates/guests/guest_detail.html
+++ b/guests/templates/guests/guest_detail.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block primary-cta %}
-<a href="#"
+<a href="{% url 'add_booking' guest.id %}"
     class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
     <svg xmlns="http://www.w3.org/2000/svg" class="mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd"
