--- a/theme/templates/bases/base-website.html
+++ b/theme/templates/bases/base-website.html
@@ -390,13 +390,13 @@
                 </li> -->
 
                 <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                  <a href="{% url 'privacy' %}" class="text-base text-gray-500 hover:text-gray-900">
                     Privacy
                   </a>
                 </li>
 
                 <li>
-                  <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                  <a href="{% url 'terms' %}" class="text-base text-gray-500 hover:text-gray-900">
                     Terms
                   </a>
                 </li>
